--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a class="header__logo">
         <img
           src="./images/logo-black.svg"
-          alt="ОНО ТЕБЕ НАДО"
+          alt="логотип проекта ОНО ТЕБЕ НАДО"
           class="header__logo-image"
         />
       </a>
@@ -36,27 +36,31 @@
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#">наб. Принсенграхт 263-265, Амстердам</a>
+        <a href="#" class="adress__link_none">наб. Принсенграхт 263-265, Амстердам</a>
       </address>
     </header>
 
     <main>
       <section class="cover">
-        <h1>ОНО ТЕБЕ НАДО</h1>
-        <div class="description">
-          <p>Аукцион вещей, вкоторые никто не верил</p>
-          <button>Сделать ставку</button>
+        <div class="overlay"></div>
+        <h1 class="cover__tittle"><span class="aligned-text aligned-text_left"><span class="no-letter-spacing">о</span>но</span><span class="aligned-text aligned-text_center">тебе<span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span></h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
       <section class="lots">
-        <h2>Лоты</h2>
-        <ul>
-          <li>
-            <a href="#">
-              <article>
-                <h3>Фильм режиссёра, который бросил киношколу</h3>
-                <p>
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_film">
+                     <div class="overlay"></div>
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -64,13 +68,14 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <article>
-                <h3>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_book">
+                     <div class="overlay"></div>
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-                <p>
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
@@ -81,13 +86,14 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <article>
-                <h3>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article  class="card card_type_picture">
+                     <div class="overlay"></div>
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
-                <p>
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
@@ -97,49 +103,63 @@
             </a>
           </li>
         </ul>
-        <a href="#">посмотреть больше</a>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
-      <section class="about-auction">
-        <div class="column1">
-          <p>ОНО ТЕБЕ НАДО</p>
+      <section class="about">
+        <div class="about__column about__column_logo ">
+          <div class="about__logo"><img class="about__logo-image" src="./images/logo-white.svg" alt="логотип аукциона ОНО ТЕБЕ"></img></div>
         </div>
-        <div class="column2">
-          <h2>Об аукционе</h2>
-          <div class="paragraphs">
-            <p>
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?
+        <div class="about__column about__column_text">
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__paragraphs">
+            <p class="about__text">
+              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
-            <p>
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
+            <p class="about__text about__text_wider">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
+на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
         </div>
       </section>
     </main>
-    <footer>
-      <address>Адрес компании</address>
-      <nav>
-        <ul>
-          <li><a href="#">главная</a></li>
-          <li><a href="#">посмотреть лоты</a></li>
-          <li><a href="#">об аукционе</a></li>
-        </ul>
-      </nav>
-      <ul class="social-links">
-        <li><a href="#">yotube</a></li>
-        <li><a href="#">vk</a></li>
-        <li><a href="#">pin</a></li>
-      </ul>
-    </footer>
+    <footer class="footer">
+ <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="#" class="adress__link_none">наб. Принсенграхт 263-265, Амстердам</a>
+      </address>
+  <nav class="footer__menu">
+    <ul class="footer__menu-list">
+      <li class="footer__menu-list-item">
+        <a href="#" class="footer__menu-link footer__menu-link_active">Главная</a>
+      </li>
+      <li class="footer__menu-list-item">
+        <a href="#" class="footer__menu-link">посмотреть лоты</a>
+      </li>
+      <li class="footer__menu-list-item">
+        <a href="#" class="footer__menu-link">об аукционе</a>
+      </li>
+  
+    </ul>
+  </nav>
+  <ul class="footer__social-list">
+    <li class="footer__social-list-item">
+      <a href="#" class="footer__social-link">
+        <img src="./images/yt.svg" alt="Youtube" class="footer__social-icon">
+      </a>
+    </li>
+    <li class="footer__social-list-item">
+      <a href="#" class="footer__social-link">
+        <img src="./images/vk.svg" alt="vk" class="footer__social-icon">
+      </a>
+    </li>
+    <li class="footer__social-list-item">
+      <a href="#" class="footer__social-link">
+        <img src="./images/pinterest.svg" alt="pinterest" class="footer__social-icon">
+      </a>
+    </li>
+  </ul>
+</footer>
   </body>
 </html>
