--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__tittle"><span class="aligned-text aligned-text_left"><span class="no-letter-spacing">о</span>но</span><span class="aligned-text aligned-text_center">тебе<span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span></h1>
+        <h1 class="cover__tittle">
+          <span class="aligned-text aligned-text_left"><span class="no-letter-spacing">о</span>но</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span>
+        </h1>
         <div class="cover__description">
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
