--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#" class="adress__link_none">наб. Принсенграхт 263-265, Амстердам</a>
+        <a href="#" class="adress__link_none"
+          >наб. Принсенграхт 263-265, Амстердам</a
+        >
       </address>
     </header>
 
@@ -44,9 +46,13 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__tittle">
-          <span class="aligned-text aligned-text_left"><span class="no-letter-spacing">о</span>но</span>
+          <span class="aligned-text aligned-text_left"
+            ><span class="no-letter-spacing">о</span>но</span
+          >
           <span class="aligned-text aligned-text_center">тебе</span>
-          <span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span>
+          <span class="aligned-text aligned-text_right"
+            >над<span class="no-letter-spacing">о</span></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -62,8 +68,10 @@
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_film">
-                     <div class="overlay"></div>
-                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -75,7 +83,7 @@
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_book">
-                     <div class="overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -92,8 +100,8 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
-              <article  class="card card_type_picture">
-                     <div class="overlay"></div>
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -110,60 +118,87 @@
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
       </section>
       <section class="about">
-        <div class="about__column about__column_logo ">
-          <div class="about__logo"><img class="about__logo-image" src="./images/logo-white.svg" alt="логотип аукциона ОНО ТЕБЕ"></img></div>
+        <div class="about__column about__column_logo">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="логотип аукциона ОНО ТЕБЕ НАДО"
+            />
+          </div>
         </div>
         <div class="about__column about__column_text">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__paragraphs">
             <p class="about__text">
-              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
             </p>
             <p class="about__text about__text_wider">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря<br>
-на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но,
+              несмотря<br />
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
             </p>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
- <address class="address footer__address">
+      <address class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#" class="adress__link_none">наб. Принсенграхт 263-265, Амстердам</a>
+        <a href="#" class="adress__link_none"
+          >наб. Принсенграхт 263-265, Амстердам</a
+        >
       </address>
-  <nav class="footer__menu">
-    <ul class="footer__menu-list">
-      <li class="footer__menu-list-item">
-        <a href="#" class="footer__menu-link footer__menu-link_active">Главная</a>
-      </li>
-      <li class="footer__menu-list-item">
-        <a href="#" class="footer__menu-link">посмотреть лоты</a>
-      </li>
-      <li class="footer__menu-list-item">
-        <a href="#" class="footer__menu-link">об аукционе</a>
-      </li>
-  
-    </ul>
-  </nav>
-  <ul class="footer__social-list">
-    <li class="footer__social-list-item">
-      <a href="#" class="footer__social-link">
-        <img src="./images/yt.svg" alt="Youtube" class="footer__social-icon">
-      </a>
-    </li>
-    <li class="footer__social-list-item">
-      <a href="#" class="footer__social-link">
-        <img src="./images/vk.svg" alt="vk" class="footer__social-icon">
-      </a>
-    </li>
-    <li class="footer__social-list-item">
-      <a href="#" class="footer__social-link">
-        <img src="./images/pinterest.svg" alt="pinterest" class="footer__social-icon">
-      </a>
-    </li>
-  </ul>
-</footer>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link footer__menu-link_active"
+              >Главная</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a href="#" class="footer__menu-link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link">
+            <img
+              src="./images/yt.svg"
+              alt="Youtube"
+              class="footer__social-icon"
+            />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link">
+            <img src="./images/vk.svg" alt="vk" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="#" class="footer__social-link">
+            <img
+              src="./images/pinterest.svg"
+              alt="pinterest"
+              class="footer__social-icon"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
