--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
       <section class="cover">
         <div class="overlay"></div>
-        <h1 class="cover__tittle">
+        <h1 class="cover__title">
           <span class="aligned-text aligned-text_left"
             ><span class="no-letter-spacing">о</span>но</span
           >
