--- a/index.html
+++ b/index.html
@@ -46,13 +46,7 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text aligned-text_left"
-            ><span class="no-letter-spacing">о</span>но</span
-          >
-          <span class="aligned-text aligned-text_center">тебе</span>
-          <span class="aligned-text aligned-text_right"
-            >над<span class="no-letter-spacing">о</span></span
-          >
+          <span class="aligned-text aligned-text_left">о<span>но</span></span><span class="aligned-text aligned-text_center"><span>теб</span><span class="no-letter-spacing">е</span></span><span class="aligned-text aligned-text_right"><span>над</span><span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
