--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
               непонятые. Когда-то они казались просто неудачными. Но,
-              несмотря<br />
-              на критику, кажущуюся простоту или сложность, сейчас без этих
+              несмотря
+              </p>
+              <p class="about__text about__text_smaller">на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
               лоты стали культовыми.
@@ -157,7 +158,7 @@
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
             <a href="#" class="footer__menu-link footer__menu-link_active"
-              >Главная</a
+              >главная</a
             >
           </li>
           <li class="footer__menu-list-item">
