--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text aligned-text_left">о<span>но</span></span><span class="aligned-text aligned-text_center"><span>теб</span><span class="no-letter-spacing">е</span></span><span class="aligned-text aligned-text_right"><span>над</span><span class="no-letter-spacing">о</span></span>
+          <span class="aligned-text aligned-text_left">о<span>но</span></span
+          ><span class="aligned-text aligned-text_center"
+            ><span>теб</span><span class="no-letter-spacing">е</span></span
+          ><span class="aligned-text aligned-text_right"
+            ><span>над</span><span class="no-letter-spacing">о</span></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -134,10 +139,8 @@
             <p class="about__text about__text_wider">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё
               время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но,
-              несмотря
-              </p>
-              <p class="about__text about__text_smaller">на критику, кажущуюся простоту или сложность, сейчас без этих
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
               лотов невозможно представить современную культуру. Когда в эти
               вещи не верил никто, продолжали верить их создатели. И сейчас эти
               лоты стали культовыми.
